<resources>
    <string name="app_name">NuevaParte</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="usuario">Usuario</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correousuario">CorreoUsuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="entrar">Entrar</string>
    <string name="resgistro">Resgistro</string>

    <string name="confirmacion_de_contrase_a">Confirmacion de contraseña</string>


</resources>