<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/MainCorreo"
        style="@style/stEditTex"
        android:layout_marginStart="88dp"
        android:layout_marginTop="216dp"
        android:hint="@string/correousuario"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/MainContraseña"
        style="@style/stEditTex"

        android:layout_marginTop="40dp"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainCorreo" />

    <Button
        android:id="@+id/botonEntrada"
        style="@style/stBoton"

        android:layout_marginTop="88dp"
        android:onClick="funclogin"
        android:text="@string/entrar"
        app:layout_constraintStart_toStartOf="@+id/BotonRegistro"
        app:layout_constraintTop_toBottomOf="@+id/MainContraseña" />

    <Button
        android:id="@+id/BotonRegistro"
        style="@style/stBoton"

        android:layout_marginBottom="24dp"
        android:onClick="funcRegistro"
        android:text="@string/resgistro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/MainContraseña"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="@+id/MainContraseña"
        app:layout_constraintTop_toBottomOf="@+id/botonEntrada"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="64dp"
        android:text="Button"
        android:onClick="fLogout"
        app:layout_constraintStart_toStartOf="@+id/BotonRegistro"
        app:layout_constraintTop_toBottomOf="@+id/BotonRegistro" />

</androidx.constraintlayout.widget.ConstraintLayout>