<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".RegistroActivity">

    <EditText
        android:id="@+id/RegNombre"
        style="@style/stEditTex"

        android:layout_marginTop="136dp"
        android:layout_marginBottom="384dp"

        android:hint="Nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/BotonResgistrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/RegCorreo"
        style="@style/stEditTex"

        android:layout_marginTop="44dp"

        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/RegNombre"
        app:layout_constraintTop_toBottomOf="@+id/RegNombre" />

    <EditText
        android:id="@+id/RegContraseña"
        style="@style/stEditTex"

        android:layout_marginTop="44dp"
        android:layout_marginEnd="1dp"

        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/RegCorreo"
        app:layout_constraintTop_toBottomOf="@+id/RegCorreo" />

    <EditText
        android:id="@+id/RegConfirmacionContraseña"
        style="@style/stEditTex"

        android:layout_marginStart="1dp"
        android:layout_marginTop="44dp"

        android:hint="@string/confirmacion_de_contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/RegContraseña"
        app:layout_constraintTop_toBottomOf="@+id/RegContraseña" />

    <Button
        style="@style/stBoton"
        android:id="@+id/BotonResgistrarse"

        android:layout_marginBottom="113dp"
        android:text="@string/registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegNombre"
        android:onClick="funcRegistrarse"
        />
</androidx.constraintlayout.widget.ConstraintLayout>